# trainer

./: Cargo.toml  README.md  build.rs  cfg.toml.example  diagram.json  rust-toolchain.toml  sdkconfig.defaults  wokwi.toml
.cargo/: config.toml
.github/workflows/: rust_ci.yml
src/: departures.rs  http.rs  main.rs  wifi.rs
